small fixes – fix header spacing issue due to .widget margin – change site-title font treatment – add space under image in post back

--- a/src/scss/components/_widgets.scss
+++ b/src/scss/components/_widgets.scss
@@ -1,6 +1,5 @@
 .widget {
   //  background-color: rebeccapurple;
-  margin-top: calc($spacer * 3);
   padding-top: calc($spacer * 3);
   margin-bottom: $spacer;
 
