--- a/src/scss/regions/_archivepages.scss
+++ b/src/scss/regions/_archivepages.scss
@@ -1,4 +1,7 @@
 .archive {
+  .sidebar .widget {
+    margin-top: calc($spacer * 3);
+  }
   .content {
     display: flex;
     flex-direction: column;
@@ -69,10 +72,8 @@
       }
       .entry-content {
         margin-bottom: calc($spacer * 1.5);
-        @include media-breakpoint-up(xl) {
-          .post-image {
-            margin-bottom: calc($spacer * 3);
-          }
+        .post-image {
+          margin-bottom: calc($spacer * 3);
         }
       }
       .entry-footer {
