--- a/src/scss/regions/_navigation_horizontal_dropdown.scss
+++ b/src/scss/regions/_navigation_horizontal_dropdown.scss
@@ -1,5 +1,6 @@
 .site-header .wrap {
   @extend .d-flex;
+  align-items: center;
 }
 
 nav.nav-primary {
